apps/quarkus-metrics-tester/base/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metrics-quarkus
  labels:
    app: metrics-quarkus
    app.kubernetes.io/component: metrics-quarkus
    app.kubernetes.io/instance: metrics-quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: metrics-quarkus
  template:
    metadata:
      labels:
        deployment: metrics-quarkus
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: metrics-quarkus
          image: metrics-image
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
