apps/quarkus-metrics-tester/base/service.yml
kind: Service
apiVersion: v1
metadata:
  name: metrics-quarkus
  labels:
    app: metrics-quarkus
    app.kubernetes.io/component: metrics-quarkus
    app.kubernetes.io/instance: metrics-quarkus
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    deployment: metrics-quarkus
